--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "telegraf": "^3.37.0"
+    "telegraf": "^3.37.0",
+    "telegraph-node": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
