--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     }
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "telegraf": "^3.37.0"
   },
