--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   },
   "dependencies": {
+    "@postlight/mercury-parser": "^2.2.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
