--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "json-csv": "^3.0.1",
     "mongoose": "^5.9.15",
     "telegraf": "^3.38.0"
   },
