--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "bot that saves post to read later",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "npm run eslint && npm run nodemon",
     "start": "node index.js",
