--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,11 @@
-name: "Workflow"
-on: ["push"]
+name: Lint Code Base
+on:
+  push:
+    branches-ignore:
+      - 'master'
 jobs:
-  build:
-    runs-on: "ubuntu-latest"
+  linter:
+    runs-on: ubuntu-latest
     steps:
-      - uses: "actions/checkout@master"
-      - name: "TODO to Issue"
-        uses: "alstr/todo-to-issue-action@v1.1.1-beta"
-        with:
-          REPO: ${{ github.repository }}
-          BEFORE: ${{ github.event.before }}
-          SHA: ${{ github.sha }}
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LABEL: "# TODO"
-          COMMENT_MARKER: "#"
-        id: "todo"
+        - uses: actions/checkout@v2
+        - uses: docker://github/super-linter:v2.1.0
