--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,5 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - uses: docker://github/super-linter:v2.1.0
+    env:
+      VALIDATE_JAVASCRIPT_STANDARD: false
