--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,4 @@ jobs:
         - uses: docker://github/super-linter:v2.1.0
     env:
       VALIDATE_JAVASCRIPT_STANDARD: false
+      VALIDATE_ALL_CODEBASE: true
