--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,5 @@ jobs:
     env:
       VALIDATE_JAVASCRIPT_STANDARD: false
       VALIDATE_ALL_CODEBASE: true
+      VALIDATE_YAML: true
+      VALIDATE_JSON: true
