--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,5 @@ jobs:
       VALIDATE_ALL_CODEBASE: true
       VALIDATE_YAML: true
       VALIDATE_JSON: true
+      VALIDATE_JAVASCRIPT_ES: true
+      JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.yml
