--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "html2json": "^1.0.2",
     "mongoose": "^5.9.13",
     "telegraf": "^3.38.0"
   },
