--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
-    "html2json": "^1.0.2",
     "mongoose": "^5.9.13",
     "telegraf": "^3.38.0"
   },
