--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^8.2.0",
     "json-csv": "^3.0.1",
     "mongoose": "^5.9.27",
+    "mongoose-fuzzy-searching": "^1.3.1",
     "mongoose-random": "^0.1.1",
     "telegraf": "^3.38.0"
   },
