--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dotenv": "^8.2.0",
     "json-csv": "^3.0.1",
     "mongoose": "^5.9.27",
-    "telegraf": "^3.38.0"
+    "telegraf": "^3.38.0",
+    "telegraf-i18n": "^6.6.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
