--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "json-csv": "^3.0.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "mongoose-fuzzy-searching": "^1.3.1",
     "mongoose-random": "^0.1.1",
