--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "npm run eslint && npm run nodemon",
     "start": "node index.js",
     "nodemon": "npx nodemon index.js",
-    "eslint": "npx eslint --fix ."
+    "eslint": "npx eslint --cache --fix ."
   },
   "repository": {
     "type": "git",
