--- a/package.json
+++ b/package.json
@@ -29,23 +29,23 @@
     }
   },
   "dependencies": {
-    "@postlight/mercury-parser": "orin220444/mercury-parser",
+    "@postlight/mercury-parser": "github:orin220444/mercury-parser",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
-    "telegraph-node": "^1.0.4",
     "json-csv": "^3.0.1",
-    "mongoose": "^5.10.0",
     "moment": "^2.27.0",
+    "mongoose": "^5.10.2",
     "mongoose-fuzzy-searching": "^1.3.1",
     "mongoose-random": "^0.1.1",
-    "telegraf": "^3.38.0"
+    "telegraf": "^3.38.0",
+    "telegraph-node": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "^10.2.13",
     "nodemon": "^2.0.4"
   }
 }
