--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "json-csv": "^3.0.1",
-    "moment": "^2.27.0",
+    "luxon": "^1.25.0",
     "mongoose": "^5.10.2",
     "mongoose-fuzzy-searching": "^1.3.1",
     "mongoose-random": "^0.1.1",
