--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "luxon": "^1.25.0",
     "mongoose": "^5.10.2",
     "mongoose-fuzzy-searching": "^1.3.1",
+    "mongoose-id-assigner": "^4.0.1",
     "mongoose-random": "^0.1.1",
     "telegraf": "^3.38.0",
     "telegraph-node": "^1.0.4"
