--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "readlaterbot",
   "version": "1.0.0",
   "description": "bot that saves post to read later",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "private": "true",
   "scripts": {
     "dev": "npm run eslint && npm run nodemon",
-    "start": "node index.js",
+    "start": "node src/index.js",
     "nodemon": "npx nodemon index.js",
     "eslint": "npx eslint --cache --fix ."
   },
