--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
-    "jsdoc": "^3.6.6",
     "json-csv": "^3.0.1",
     "luxon": "^1.25.0",
     "mongoose": "^5.10.11",
@@ -52,6 +51,7 @@
     "eslint-config-google": "^0.14.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "jsdoc": "^3.6.6"
   }
 }
