--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,7 +6,10 @@ extends:
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
+parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
+plugins:
+  - '@typescript-eslint'
 rules: {}
