--- a/package.json
+++ b/package.json
@@ -47,11 +47,15 @@
     "telegraph-node": "^1.0.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.12.1",
     "eslint-config-google": "^0.14.0",
     "husky": "^4.3.0",
+    "jsdoc": "^3.6.6",
     "lint-staged": "^10.5.0",
     "nodemon": "^2.0.6",
-    "jsdoc": "^3.6.6"
+    "ts-migrate": "^0.1.7",
+    "typescript": "^4.0.3"
   }
 }
