--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "readlaterbot",
   "version": "1.0.0",
   "description": "bot that saves post to read later",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "private": "true",
   "scripts": {
     "dev": "npm run eslint && npm run nodemon",
-    "start": "node src/index.js",
-    "nodemon": "npx nodemon index.js",
+    "start": "node dist/index.js",
+    "nodemon": "npx nodemon dist/index.js",
     "eslint": "npx eslint --cache --fix",
-    "doc":"npx jsdoc -c jsdoc.json"
+    "doc": "npx jsdoc -c jsdoc.json"
   },
   "repository": {
     "type": "git",
