fix eslint. add rules

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,8 @@ env:
   node: true
 extends:
   - google
+  - plugin:@typescript-eslint/recommended
+  - plugin:@typescript-eslint/recommended-requiring-type-checking
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
@@ -10,6 +12,8 @@ parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
+  project: src/tsconfig.json
+  sconfigRootDir: "./src"
 plugins:
   - '@typescript-eslint'
 rules: {}
