--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,7 +13,7 @@ parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
-  project: src/tsconfig.json
+  project: tsconfig.json
   sconfigRootDir: "./src"
 plugins:
   - '@typescript-eslint'
