--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "dev": "npm run eslint && npm run nodemon",
     "start": "node dist/index.js",
     "nodemon": "npx nodemon dist/index.js",
-    "eslint": "npx eslint --cache --fix",
-    "doc": "npx jsdoc -c jsdoc.json"
+    "eslint": "npx eslint --cache --fix src",
+    "doc": "npx jsdoc -c jsdoc.json",
+"ts":"npx tsc -p tsconfig.json"
   },
   "repository": {
     "type": "git",
