add typedoc dep and add some configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,10 @@
     "esModuleInterop": true,   
     "skipLibCheck": true,     
     "forceConsistentCasingInFileNames": true 
-  }
+  },
+  "typedocOptions": {
+         "inputFiles": ["./src"],
+        "mode": "modules",
+        "out": "docs"
+    }
 }
