--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "nodemon": "npx nodemon dist/index.js",
     "eslint": "npx eslint --cache --fix src",
     "doc": "npx jsdoc -c jsdoc.json",
-    "ts":"npx tsc -p tsconfig.json"
+    "ts": "npx tsc -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -57,6 +57,7 @@
     "lint-staged": "^10.4.2",
     "nodemon": "^2.0.6",
     "ts-migrate": "^0.1.7",
+    "typedoc": "^0.19.2",
     "typescript": "^4.0.3"
   }
 }
