--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 
     "target": "ESNEXT",
     "module": "ESnext",
+    "lib": ["es6"],
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
