--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     }
   },
   "dependencies": {
-    "@postlight/mercury-parser": "github:orin220444/mercury-parser#master",
+    "@postlight/mercury-parser": "^2.2.0",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
@@ -41,7 +41,7 @@
     "mongoose": "^5.10.11",
     "mongoose-fuzzy-searching": "^1.3.1",
     "mongoose-random": "^0.1.1",
-    "telegraf": "^3.38.0",
+    "telegraf": "^4.2.1",
     "telegraph-node": "^1.0.4"
   },
   "devDependencies": {
